# todomvc_test

./: .gitignore  config.prod.env  pyproject.toml
tests/: conftest.py  test_app.py  test_operations_at_all_filter.py  test_operations_at_filter_all.py  test_operations_filter_all_oop_style.py  test_poc.py  test_poc_refactored.py  test_todo_management.py  test_todomvc_poc.py
tests/pages/: app.py  filter_all_oop.py
tests/tests_for_paralel/: test_for_pydantic.py  test_for_pydantic_second.py
todomvc_test/helpers/: app.py
todomvc_test/model/: __init__.py  config.py  todos.py
todomvc_test/model/pages/: app.py  todomvc_page.py  todos.py
