[tool.poetry]
name = "todomvc_test"
version = "0.1.0"
description = ""
authors = ["hob83 <buryachek83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = {version = "^1.0.2", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
